service.yaml
apiVersion: v1
kind: Service
metadata:
  name: register-app-service
  namespace: register-app
spec:
  type: LoadBalancer
  selector:
    app: register-app
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
