ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: registerapp-ingress
  namespace: register-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /webapp
            pathType: Prefix
            backend:
              service:
                name: register-app-service
                port:
                  number: 8080
